TMP/Stuff.yaml

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: s3-originate-tls

spec:
  host: s3-minio
  trafficPolicy:
    tls:
      insecureSkipVerify: true
      mode: SIMPLE
